Reapply "fix: overflow clip"
This reverts commit 049dc04cb02e4a99b807579a2c7cdc7c60894bdb.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,7 +29,15 @@
 
     @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
       &::before {
-        display: none;
+        width: 50vw;
+      }
+    }
+
+    @supports (-webkit-touch-callout: none) {
+      @media (pointer: coarse) and (any-pointer: coarse) and (hover: none) and (any-hover: none) {
+        &::before {
+          display: none;
+        }
       }
     }
   }
@@ -221,6 +229,7 @@
   html {
     // Need scroll padding to offset the fixed header
     @apply scroll-smooth scroll-pt-16;
+    overflow-x: clip;
     scrollbar-color: colors.$light-shades
       color.scale(colors.$dark-shades, $alpha: -30%);
   }
